--- a/project/src/pages/Home/App.module.scss
+++ b/project/src/pages/Home/App.module.scss
@@ -1,19 +1,24 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.logoContainer {
+  display: inline-block;
+  padding: 1.5em;
+}
+
+.logoWrapper {
+  width: 6em;
+  height: 6em;
 }
 
 .logo {
-  height: 6em;
-  padding: 1.5em;
+  width: 100%;
+  height: 100%;
   will-change: filter;
   transition: filter 300ms;
 }
+
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
+
 .logo.react:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
@@ -37,6 +42,6 @@
   padding: 2em;
 }
 
-.read-the-docs {
+.readTheDocs {
   color: #888;
 }
